discussion/kv_engine/173672/173672_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for collecting metering data (WIP)

Add the skeleton for collecting metering information. Note that
all commands implemented in the engine itself would need to
update the cookie with the amount of data read / written

It is "easy" to track the write path as a successful document write
contains the WCU. We can't really use the bucket_get() methods for
counting the RCU's as we do multiple of them and might not return
the data to the user (also to implement retry logic on the server
for dealing with cas conflicts)

Change-Id: I20d4b7779db95d73236c667255e232b09771f786

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-19 11:32:31.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 11:46:35.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26918/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6389/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6389/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19552/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18514/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18514/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18850/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18850/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17609/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6451/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6451/ )
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 11:46:41.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6451/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45350/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/tenant.cc(35): error C2143: syntax error: missing ";" before "}" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45350/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38095/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant.cc:34:70:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38095/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16736/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:34:70: error: expected ";" after expression [clang-diagnostic-error]
                                           s.getReadComputeUnitSize()
                                                                     ^
                                                                     ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:39:71: error: expected ";" after expression [clang-diagnostic-error]
                                           s.getWriteComputeUnitSize()
                                                                      ^
                                                                      ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16736/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:34:70:
error: expected ";" after expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6389/ : FAILURE

Compile error at [2022-04-19T11:37:26.911Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/tenant.cc:34:70:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6389/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17609/ : FAILURE

Compile error at [2022-04-19T11:40:06.668Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/tenant.cc:34:70:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18514/ : FAILURE

Compile error at [2022-04-19T11:37:38.852Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master@2/kv_engine/daemon/tenant.cc:34:70:
error: expected ?;? before ?}? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18514/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19552/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18850/ : FAILURE

Compile error at [2022-04-19T11:40:20.922Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/tenant.cc:34:70:
error: expected ?;? before ?}? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18850/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26918/ : FAILURE

Compile error at [2022-04-19T11:40:21.284Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/tenant.cc:34:70:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26918/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15666/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
